erDiagram
  USER ||--o{ BRAND : owns
  USER ||--o{ PRODUCT : owns
  BRAND ||--o{ PRODUCT : contains
  PRODUCT ||--o{ PRODUCT_ASSET : has
  PRODUCT ||--o{ WORKFLOW_EXECUTION : triggers
  WORKFLOW_DEFINITION ||--o{ WORKFLOW_EXECUTION : versions
  WORKFLOW_EXECUTION ||--o{ WORKFLOW_STEP_EXECUTION : records
  WORKFLOW_EXECUTION ||--o{ GENERATED_ARTIFACT : produces
  PROMPT_TEMPLATE ||--o{ GENERATED_ARTIFACT : shapes
  AI_PROVIDER_CONFIGURATION ||--o{ GENERATED_ARTIFACT : generates
  WORKFLOW_EXECUTION ||--o| APPROVAL_REQUEST : requests
  GENERATED_ARTIFACT ||--o| APPROVAL_REQUEST : reviews
  APPROVAL_REQUEST ||--o| PUBLISHING_EXECUTION : authorizes
  PUBLISHING_CONNECTION ||--o{ PUBLISHING_EXECUTION : handles
  GENERATED_ARTIFACT ||--o{ PUBLISHING_EXECUTION : publishes
  USER ||--o{ AUDIT_EVENT : acts
  USER ||--o{ APPLICATION_SETTING : updates
